[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm"
    #"setuptools_scm>=7.0.0,<9.0.0" #needed for macos>13
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[project]
name = "quicklook-package"
authors = [{name = "jpdeleon", email = "jpdeleon.bsap@gmail.com"}]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pre-commit==3.4.0",
    "matplotlib",
    "lightkurve==2.5",
    "numpy==1.23",
    "transitleastsquares==1.32",
    "wotan==1.10",
    "aesthetic==0.6",
    "flammkuchen==1.0.3",
    "reproject==0.12.0",
    "astroplan==0.9",
    "loguru",
    "importlib_resources>=5.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
"Homepage" = "https://github.com/jpdeleon/quicklook"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
