[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["."]
include = ["quicklook*"]
exclude = ["app*", "static*", "notebook*", "tests*"]

[tool.setuptools.package-data]
"quicklook" = ["data/*.csv"]

[project]
name = "quicklook-package"
dynamic = ["version"]
authors = [{name = "jpdeleon", email = "jpdeleon.bsap@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "matplotlib",
    "lightkurve==2.5",
    "numpy==1.23",
    "transitleastsquares==1.32",
    "wotan==1.10",
    "flammkuchen==1.0.3",
    "reproject==0.12.0",
    "astroplan==0.9",
    "loguru",
    "importlib_resources>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",           # run tests
    "pytest-benchmark", # measure performance
    "black",            # enforce formatting
    "mypy",             # static type checking
    "pre-commit",       # hook management
    "tox",              # multi-env testing
    "ruff",             # fast linting
    #"flake8>=6.0"       # legacy linting
]

# --- converter ---
notebooks = [
    "ipykernel",
    "jupyter",
    "nbconvert"
]

[project.urls]
Homepage = "https://github.com/jpdeleon/quicklook"

# --- formatter ---
[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '/(\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist)/'

# --- linter ---
[tool.ruff]
line-length = 100
select = ["B", "C", "E", "F", "W", "B9"]

[tool.ruff.lint]
ignore = [
  "E203",
  "E266",
  "E501",
  "F403",
  "F401",
  "C901",
  "B904",  #exceptions
  "B006", #Do not use mutable data structures for argument defaults
  "B028", #No explicit `stacklevel` keyword argument found; in gls.py
  "C408",  #Unnecessary `dict()` call; in gls.py
]
